# red_belt_CPP

./: CMakeLists.txt  Logger.h  Solutions.h  airline_ticket.h  deque.h  main.cpp  profile.h  stats.cpp  stats.h  template_outputs.h  test_runner.h
headers/: JosephusPermutation.h  Logger.h  Solutions.h  TextEditor.h  Translator.h  airline_ticket.h  airport_counter.h  deque_authors.h  hotel_manager.h  joseph_permutation.h  linked_list.h  paginator.h  paginator_authors.h  simple_vector.h  stack_vector.h  student.h
